src/objects/RequestHousing__c.object
<CustomObject>
    <description>RequestHousing object is solely used for the Request Housing Tab Wizard to create a &quot;super object&quot; used within the VF page.

This object will never house any data.</description>
    <fields>
        <fullName>ContactFirstName__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactHomePhone__c</fullName>
        <label>Home Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OppALELimitAmt__c</fullName>
        <label>ALE Limit Amount</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppALELimitTime__c</fullName>
        <label>ALE Limit Time (Months)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppAlreadyInHotel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the policyholder currently in a hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OppClaimNum__c</fullName>
        <label>Claim #</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppCloseDate__c</fullName>
        <label>Start Date or Est. Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OppDamagedPropAddress__c</fullName>
        <label>Address</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppDamagedPropBR__c</fullName>
        <label>Number of Bedrooms</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppDamagedPropBTH__c</fullName>
        <label>Number of Bathrooms</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppDamagedPropCity__c</fullName>
        <label>City</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppDamagedPropSqFt__c</fullName>
        <label>Square Footage</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppDamagedPropState__c</fullName>
        <label>State</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppDamagedPropType__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Townhome</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OppDamagedPropZip__c</fullName>
        <label>Zip</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppDateOfLoss__c</fullName>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OppDescription__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OppInitialServiceRequest__c</fullName>
        <label>Initial Service Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hotel into Housing</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Hotel Only</fullName>
                </value>
                <value>
                    <fullName>FRV</fullName>
                </value>
                <value>
                    <fullName>Furniture Only</fullName>
                </value>
                <value>
                    <fullName>Unfurnished House</fullName>
                </value>
                <value>
                    <fullName>Trailer/Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OppTypeOfLoss__c</fullName>
        <label>Type of Loss</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Mold</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Tornado</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SREstLengthOfStayDays__c</fullName>
        <inlineHelpText>Hotel</inlineHelpText>
        <label>Est. Length of Stay Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SREstLengthOfStay__c</fullName>
        <inlineHelpText>Housing</inlineHelpText>
        <label>Est. Length of Stay (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRNumberOfAdults__c</fullName>
        <label>Number of Adults</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRNumberOfBathrooms__c</fullName>
        <label>Number of Bathrooms</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRNumberOfBedrooms__c</fullName>
        <label>Number of Bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRNumberOfChildren__c</fullName>
        <label>Number of Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRNumberOfPets__c</fullName>
        <label>Number of Pets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRPropertyType__c</fullName>
        <inlineHelpText>If the policyholder is open to more than one type of property, please put that infomation in the Description field.</inlineHelpText>
        <label>Type of Housing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Corporate Furnished</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Travel Trailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RequestHousing</label>
    <nameField>
        <label>RequestHousing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RequestHousing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>